bin/tests/snapshots/empty_pattern__lint_22c961ee54a9c23b418b940d007946468ffce1d27d6fcb5460b3930ee3aa3188.snap
---
source: bin/tests/empty_pattern.rs
---
({ ... }: 42)

---
[W10] Warning: Found empty pattern in function argument
   ╭─[<temp_file_path>:1:2]
   │
 1 │ ({ ... }: 42)
   ·  ───┬───  
   ·     ╰───── This pattern is empty, use _ instead
───╯
