bin/tests/snapshots/empty_pattern__lint_a0f60e09ffb31c58f803adaf8e3f854bb95fc3a4f6ac05072ee5f4f644a12141.snap
---
source: bin/tests/empty_pattern.rs
expression: snapshot
---
expression:
({ ... }: { imports = []; })
---
