bin/tests/snapshots/empty_pattern__lint_b208a77aedcbe49076a77bb680515b44d4d67ffe6f897964572f3238898e91fa.snap
---
source: bin/tests/empty_pattern.rs
---
({ ... } @ inputs: inputs)

---
[W11] Warning: Found redundant pattern bind in function argument
   ╭─[<temp_file_path>:1:2]
   │
 1 │ ({ ... } @ inputs: inputs)
   ·  ────────┬───────  
   ·          ╰───────── This pattern bind is redundant, use inputs instead
───╯
